kubernetes/httpd-reverse-proxy/httpd-reverse-proxy-with-oauth2.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: httpd
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    app: httpd
    tier: frontend
spec:
  selector:
    matchLabels:
      app: httpd
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: httpd
        tier: frontend
    spec:
      serviceAccountName: httpd
      containers:
      - image: httpd:latest
        name: httpd
        command: [ "/bin/bash", "-c", "/temp-confs/configure-httpd.sh && httpd-foreground" ]
        ports:
        - containerPort: 80
          name: http
        resources:
          limits:
            cpu: 250m
            memory: 128Mi # Needs memory for installing OIDC
          requests:
            cpu: 1m
            memory: 32Mi
        volumeMounts:
          - name: httpd-config-mount
            mountPath: /temp-confs
      volumes:
        - name: httpd-config-mount
          configMap:
            name: httpd-config-map
            items:
            - key: "httpd-oauth2-test.example.com.conf"
              path: "httpd-oauth2-test.example.com.conf"
            - key: "configure-httpd.sh"
              path: "configure-httpd.sh"
              mode: 0755         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: httpd-ingress
    app.kubernetes.io/part-of: httpd
  name: httpd-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: httpd-oauth2-test.example.com
      http: &backend
        paths:
          - backend:
              service:
                name: httpd
                port:
                  name: http
            path: /
            pathType: Prefix
    - #host: someotherdomain.example-domain.com
      #http: *backend
---
